# modded-nanogpt

./: .gitignore  .pre-commit-config.yaml  NOTES.md  pyproject.toml  requirements.txt  train_gpt_adam.py  train_gpt_muon.py  train_gpt_muon_exp.py  train_scaling.py
configs/: scaling.yaml
nanogpt/: flops.py  utils.py
nanogpt/data/: distributed_loader.py
nanogpt/model/: gpt.py
nanogpt/optimizer/: muon.py
x/: calc_2gram_entropy.py  compare_muon_params.py  phi.py  plot_parameter_contour.py  plot_scaling.py  wandb_downloader.py
