[project]
name = "modded-nanogpt"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "tqdm",
    "huggingface-hub",
    "kernels",
    "setuptools",
    "pre-commit",
    "typing_extensions",
    "wandb",
    "pandas",
    "openpyxl",
    "matplotlib",
    "torch==2.11.0.dev20251218+cu126",
    "scipy",
    "ray",
    "hydra-core>=1.3.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/nightly/cu126"]
